--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@ohif/viewer": "^4.5.21",
     "@quasar/extras": "^1.0.0",
-    "axios": "^0.20.0",
     "core-js": "^3.6.5",
+    "less": "^3.12.2",
+    "less-loader": "^7.0.2",
     "pandoc": "^0.2.0",
     "quasar": "^1.0.0",
+    "raw-loader": "^4.0.2",
     "vue": "^2.6.11",
     "vue-router": "^3.3.2"
   },
